Support creating and updating files from V3
- Add /rest/files/sync_from_v3 endpoint for file updates from V3
- Remove nonexistent file replication_path field from docs example
- Add metax_service to file endpoint roles
